BFAST -- History of visible changes.

Copyright (C) 2008-2009, University of California - Los Angeles
See COPYING for copying conditions.

Please send bfast bug reports to nhomer@cs.ucla.edu

Version 0.4.7
* Updated output file naming in bmfconvert.

Version 0.4.6
* Simplified the scoring matrix.  Now only match/mismatch is required for
input.
* Updated bug in color space local aligner if the color match score was
not zero. Also enforcing all color match and color mismatch scores
respectively to be the same to allow for an optimization in the algorithm.

Version 0.4.5
* Moved mapping quality calculation to balign.  BAF files have an extra
field specifying the mapping quality.  For 0.4.1-0.4.4 BAF versions, use
fixbaf to convert them to 0.4.5 versions.
* Removed bfix - obsolete.

Version 0.4.4
* Fixed bugs when outputting to SAM format.
* Added bmf conversion to fastq.
* Fixed bug in RGRanges, where pallindromic sequences were being removed
from one strand.
* Added new utility brg2fasta.
* Added ability in bmatches to use masks that are prefixes of the mask (-k).
* Now can output a very rudimentary mapping quality in bpostprocess.
* Added a scripts folder to convert raw base/color calls to BFAST fastq
format.

Version 0.4.3
* Added an option to bpostprocess where all "best scoring" alignments
can be returned.
* Fixed bug where aligning perfectly did not retain repeat masker 
information in the reference.

Version 0.4.2
* Added support for SAM 0.1.2 output.
* Added new utility brepair, which tries to align unpaired reads. I 
would not recommend using it since it does not in my analysis help
too much in practice and is inefficient.

Version 0.4.1
* Adding support for quality scores.  The input reads now must be in
fastq or multi-end fastq format.
* Adding support for multi end reads.
* The names of Output files of bmatches, balign, and subsequent 
programs are changed.

Version 0.3.4
* Updated balign, bmfconvert, bafconvert, and bsort output file names.