@@ -4,6 +4,7 @@
 #include <assert.h>
 #include <limits.h>
 
+#include "BLib.h"
 #include "BError.h"
 #include "BLibDefinitions.h"
 #include "ScoringMatrix.h"
@@ -120,4 +121,18 @@ int32_t ScoringMatrixCheck(ScoringMatrix *sm,
 				OutOfRange);
 	}
 	return 1;
+}
+
+int32_t ScoringMatrixGetNTScore(char a,
+		char b,
+		ScoringMatrix *sm)
+{
+	return (ToUpper(a) == ToUpper(b)) ? sm->ntMatch : sm->ntMismatch;
+}
+
+int32_t ScoringMatrixGetColorScore(char a, 
+		char b, 
+		ScoringMatrix *sm) 
+{
+	return (a == b) ? sm->colorMatch : sm->colorMismatch;
 }
